:bug: PIC-1791 - update other probation status just for most recent version